OCW-684 #comment change padding to margin to align the in depth text correctly

--- a/core/static/css/_article.scss
+++ b/core/static/css/_article.scss
@@ -39,7 +39,7 @@
     .type {
       @include type($primary-topic-color);
       font-weight: 700;
-      padding-bottom: 10px;
+      margin-bottom: 10px;
       border-bottom: $border-white;
       a {
         padding-left: 0;
